--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Your Website Title</title>
 <link rel="icon" href="/sys/fav.png" type="image/png">
-<link rel="stylesheet" href="/sys/sty.css">
+<link rel="stylesheet" href="/sys/style.css">
 </head>
 <body>
 <div class="container">
