--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </header>
 <div class="content">
 <aside class="sidebar">
-сайдбарик
+сайдбарикrrrr
 </aside>
 <main class="main-content">
 контентушка
