--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
 <header class="header">
-шапка
+шапкааааа
 </header>
 <div class="content">
 <aside class="sidebar">
